src/compiler/tests/valid/valid_program1.klt


fun main () : None {
    val a: Int;
    var b: Int;
    var c: Int;

    a = 4;
    b = 5;
    c =


}
