src/compiler/tests/invalid/invalid_program1/prueba.klt
fun main(): Int {
    var a: Int;
}